[package]
name = "elevator-pitch"
version = "0.1.0"
authors = ["finnkauski <iwiifi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rocket related
rocket = "0.4.2"
rocket_contrib = {version = "*", features = ["diesel_postgres_pool", "tera_templates", "serve"], default-features = false}

# diesel
diesel = {version = "*", features = ["postgres", "r2d2"], default-features= false}
diesel_migrations = "*"

# serde
serde = "*"
serde_derive = "*"

# handle pandoc
pandoc = "*"
